--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Delani Studio</title>
-
+    
 </head>
 <body>
     <div class="landing">
-        <img src=
+        <img src="images/logo/logo.png" alt="logo" id="logo">
+        <h1>WELCOME</h1>
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIROMENT</p>
+        <div class="mouse-click"></div>
+        <a href="#about-us"><img src="images/mouse_click.png" alt="mouse_click" id="mouse-click"></a>
     </div>
+    <div class="container about" id="about -us"
 </body>
 </html>
