Add div class container fluid which contains a class called jumbotrain fluid that acts as the landing page for the webpage

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Delani Studio</title>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0c3a8991fb082b831f0556fce/3af0a402a75f4953479c1801.js");</script>
 </head>
 <body>
-    <div class="landing">
-        <img src="images/logo/logo.png" alt="logo" id="logo">
-        <h1>WELCOME</h1>
-        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIROMENT</p>
-        <div class="mouse-click"></div>
-        <a href="#about-us"><img src="images/mouse_click.png" alt="mouse_click" id="mouse-click"></a>
+    <div class="container-fluid">
+        <div class="jumbotron-fluid">
+            <div class="overlay">
+                <img src="./images/logo/logo.png" alt="logo" class="mx-auto d-block">  
+                <h1 class="text-white text-center welcome h-text">Welcome</h1>
+                <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1> 
+                <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIROMENT</h6>
+                <a href="#about"><img src="./images/mouse_click.png" class="mx-auto d-block click" alt="mouse click" id="bounce"></a>
+            </div>
+        </div>
+        
     </div>
-    <div class="container about" id="about -us"
+
 </body>
 </html>
