--- a/index.html
+++ b/index.html
@@ -57,8 +57,78 @@
                 </div>
             </div>
         </div>
+        <div class="portfolio container-fluid">
+            <br><br><br>
+            <h1 class="text-center b-text">PORTFOLIO</h1><br>
+            <div class="col-md-12 mx-auto">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work4.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div>
+                                <div class="porttext" style="display:none">Jungle Green</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work3.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div>
+                                <div class="porttext" style="display:none">Mighty Ontario</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work2.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div>
+                                <div class="porttext" style="display:none">Golden Prisms</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work1.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div class="disc1">
+                                <div class="porttext" style="display:none">Buffer AIO</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work5.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div class="porttext" style="display:none">Blog/Portfolio</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work6.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div class="porttext" style="display:none">Data Info Forms</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work7.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div class="porttext" style="display:none">Burned Logo</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work8.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div class="porttext" style="display:none">Giraffe Restaurant</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
+        </div>
         
-    </div>
 
 </body>
 </html>
