--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="portimg">
                             <img src="./images/portfolio/work1.jpg" alt="portfolio-images" class="image img-fluid">
                             <div class="disc1">
-                                <div class="porttext" style="display:none">Jim Carry</div>
+                                <div class="porttext" style="display:none">Socials Buffer</div>
                             </div>
                         </div>
                     </div>
