--- a/index.html
+++ b/index.html
@@ -150,20 +150,19 @@
             <div class="contact-overlay">
                 <h1 class="text-center text-white b-text">CONTACT US</h1><br>
                 <div class="col-md-12 input">
-                    <form id="form">
-
+                    <form action="https://gmail.us1.list-manage.com/subscribe/post?u=928498b2c43624594c069d39b&amp;id=7c2ea424d5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div class="row">
                             <div class="col-md-2 form"></div>
-                            <input class="col-md-4 form-control name" type="text" id="name" name="name"
+                            <input class="col-md-4 form-control name" type="text" id="mce-FNAME" name="FNAME"
                                 placeholder="Name..." required><br><br>
-                            <input class="col-md-4 form-control email" type="email" id="email" name="email"
+                            <input class="col-md-4 form-control email" type="email" id="mce-EMAIL" name="EMAIL"
                                 placeholder="Email..." required>
                             <div class="col-md-2">
                             </div>
                         </div>
                         <div class="row input">
                             <div class="col-md-2"></div>
-                            <textarea class="form-control col-md-8 text" rows="12" name="message" id="message"
+                            <textarea class="form-control col-md-8 text" rows="12" name="MESSAGE" id="mce-MESSAGE"
                                 placeholder="Your message here..."></textarea>
                             <div class="col-md-2"></div>
                         </div>
@@ -171,6 +170,7 @@
                             type="submit">Submit</button>
                         <br>
                     </form>
+>
                 </div>
             </div>
         </div>
